[B]Version 0.0.12[/B]
- Changed live stream urls to have HD quality / Otsevaatamise urlide muutus,et oleks võimalik HD pilti vaadata
- Subtitle support, can be toggled in settings / Subtiitrite tugi, saab seadete alt lubada/keelata
[B]Version 0.0.11[/B]
- Fixed Buggalo url / Buggalo urli parandus
[B]Version 0.0.10[/B]
- Fixed typo / näpuvea parandus
[B]Version 0.0.9[/B]
- Added support for ETV+ / ETV+ tugi
[B]Version 0.0.8[/B]
- Add urls for live streams / Otsevaatamise lingid
[B]Version 0.0.6[/B]
- Make it work with new page / Uue lehe tugi
- support ETV & ETV2 / ETV ja ETV2 tugi
- misc / jne
[B]Version 0.0.4[/B]
- Gotham support / Gothami tugi
[B]Version 0.0.3[/B]
- Make number of days to show configurable
[B]Version 0.0.2[/B]
- Updated in repo
[B]Version 0.0.1[/B]
- Initial release