@@ -9,4 +9,9 @@
     <string id="30004">How many days to show</string>
     <string id="30005">General</string>
     <string id="30006">Show subtitles</string>
+    <string id="30007">Primary preference</string>
+    <string id="30008">Secondary preference</string>
+    <string id="30009">Estonian</string>
+    <string id="30010">Hearing impaired</string>
+    <string id="30011">Russian</string>
 </strings>
