@@ -9,4 +9,9 @@
     <string id="30004">Mitme päeva saateid näidatakse</string>
     <string id="30005">Üldine</string>
     <string id="30006">Näita subtiitreid</string>
+    <string id="30007">Esmane eelistus</string>
+    <string id="30008">Teine eelistus</string>
+    <string id="30009">Eesti</string>
+    <string id="30010">Vaegkuuljad</string>
+    <string id="30011">Vene</string>
 </strings>
